# DEGA

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
DEGA/: SIDE.py  __init__.py  core.py  countsTranformers.py  dispersions.py  logger.py  plots.py  refit.py  statisticalTests.py  utils.py
DEGA/cython/: estimateDispersion.cpp  estimateDispersion.pyx  negativeBinomialGLM.cpp  negativeBinomialGLM.pyx  setup.py
case_study/: GBM_phenotypes.tsv  ensemblId2geneName.tsv  get_data.ipynb  hugo_genes.tsv  switch_GBM.ipynb
validation/: DEGA.ipynb  DESeq2.ipynb  DESeq2_bottomlyResults.csv  DESeq2_bottomlyWithShrinkageResults.csv  README.md  bottomly_counts.csv  bottomly_phenotypes.csv  validationPlots.py
validation/.ipynb_checkpoints/: DEGA-checkpoint.ipynb  DESeq2-checkpoint.ipynb
